# movie-recommender

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup_data.sh
src/: main.py
